Fix overflowing text in rates section

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -4569,7 +4569,8 @@ Rates section - Rates
 .graphic-rates {
     display: flex;
     align-items: center;
-    padding-left: 10px;
+    padding-left: 50px;
+    padding-right: 0px;
 }
 
     @media (max-width: 575px) {
